--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@babel/preset-env": "^7.18.2",
     "@prettier/plugin-pug": "^2.1.0",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
@@ -44,9 +46,9 @@
     "postcss-preset-env": "^7.7.1",
     "prettier": "^2.7.1",
     "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
+    "simple-pug-loader": "^0.2.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.9.1",
     "stylelint-config-standard-scss": "^4.0.0",
