--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "file-loader": "^6.2.0",
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
@@ -60,6 +59,7 @@
   "dependencies": {
     "air-datepicker": "^3.2.0",
     "inputmask": "^5.0.7",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "paginationjs": "^2.1.5"
   }
 }
