--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "air-datepicker": "^3.2.0",
     "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
-    "paginationjs": "^2.1.5"
+    "paginationjs": "^2.1.5",
+    "swiper": "^8.2.6"
   }
 }
