--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "air-datepicker": "^3.2.0",
+    "chart.js": "^3.8.0",
     "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
     "paginationjs": "^2.1.5",
