--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.18.2",
     "@prettier/plugin-pug": "^2.1.0",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
